# qinAegis

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  INSTALL.md  INSTALL_zh.md  LICENSE  README.md  README_zh.md  qinAegis-platform-roadmap.md
Formula/: qinAegis.rb
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  lib.rs  main.rs  oauth_server.rs
crates/cli/src/commands/: explore.rs  export.rs  gate.rs  generate.rs  init.rs  mod.rs  notion.rs  performance.rs  project.rs  review.rs  run.rs
crates/cli/src/tui/: app.rs  components.rs  config_form.rs  dashboard.rs  explore_view.rs  generate_view.rs  mod.rs  project_list.rs  review_view.rs  run_view.rs
crates/cli/tests/: trycmd_test.rs  tui_app_test.rs  tui_components_test.rs  tui_config_form_test.rs  tui_dashboard_test.rs  tui_explore_view_test.rs  tui_project_list_test.rs
crates/cli/tests/cmd/: qinAegis.trycmd
crates/cli/tests/snapshots/: tui_config_form_test__config_form_empty.snap  tui_config_form_test__config_form_empty.snap.new  tui_config_form_test__config_form_none.snap  tui_config_form_test__config_form_none.snap.new  tui_config_form_test__config_form_real.snap  tui_config_form_test__config_form_real.snap.new  tui_dashboard_test__dashboard_empty.snap  tui_dashboard_test__dashboard_loading.snap  tui_dashboard_test__dashboard_with_message.snap  tui_dashboard_test__dashboard_with_projects.snap  tui_explore_view_test__explore_depth_adjusted.snap  tui_explore_view_test__explore_idle_empty_url.snap  tui_explore_view_test__explore_input_mode.snap  tui_explore_view_test__explore_url_empty_input_mode.snap  tui_explore_view_test__explore_with_url.snap  tui_project_list_test__project_list_empty.snap  tui_project_list_test__project_list_first_selected.snap  tui_project_list_test__project_list_second_selected.snap
crates/cli/tests/tui/: mod.rs  render_helpers.rs
crates/core/: Cargo.toml
crates/core/src/: critic.rs  executor.rs  explorer.rs  gate.rs  generator.rs  healer.rs  knowledge.rs  lib.rs  llm.rs  performance.rs  performance_test.rs  protocol.rs  protocol_test.rs  reporter.rs  storage.rs  stress.rs  stress_test.rs
crates/core/src/automation/: midscene.rs  mod.rs  trait_def.rs
crates/core/src/config/: app.rs  app_test.rs  mod.rs
crates/core/src/prompts/: i18n.rs  mod.rs
crates/core/src/sandbox/: adapter.rs  mod.rs
crates/core/src/service/: mod.rs  test_case.rs
crates/core/src/storage/: local.rs  mod.rs  trait_def.rs
crates/web_client/: Cargo.toml  app.js  build.rs  index.html  style.css
crates/web_client/src/: assets.rs  main.rs
crates/web_client/src/assets/: index.html
crates/web_client/src/assets/assets/: index-CUZyFx21.js  index-C_ui9mCT.css  index-DrNhPGmT.css  index-qGFs5auw.js
crates/web_client/ui/: index.html  package.json  vite.config.ts
crates/web_client/ui/src/: App.tsx  styles.css
crates/web_client/ui/src/components/: Dashboard.tsx  ExploreView.tsx  GenerateView.tsx  InitWizard.tsx  ReportView.tsx  ReviewView.tsx  RunView.tsx  SettingsView.tsx  Sidebar.tsx
docs/: CI_INTEGRATION.md  (+4 more)
(+69 files in other folders)
