[workspace]
resolver = "2"
members = ["crates/cli", "crates/notion", "crates/sandbox", "crates/core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["QinAegis Team"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
thiserror = "2"
anyhow = "1"
tracing = "0.1"