[workspace]
resolver = "2"
members = ["crates/core", "crates/web_client"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["QinAegis Team"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
dirs = "5"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }