[package]
name = "qinAegis"
version.workspace = true
edition.workspace = true

[[bin]]
name = "qinAegis"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
ratatui = "0.27"
crossterm = "0.27"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
qin_aegis_core = { path = "../core" }
open = "5"