[package]
name = "qinAegis-web"
version = "0.1.0"
edition = "2021"
description = "QinAegis WebView Desktop Client"

[dependencies]
wry = "0.55"
tao = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5"
tracing = "0.1"

qin_aegis_core = { path = "../core" }

[profile.release]
strip = true
lto = true
codegen-units = 1
